# transfer-sh-helper-rusted

./: Cargo.toml  LICENSE  README.md
src/: arg_parser.rs  database.rs  errors.rs  macros.rs  main  main.rs  sqls.rs  utils.rs
