[package]
name = "transferhelper"
version = "0.4.920"
edition = "2021"
authors = ["OLoKo64 <reinaldorozatoj.11cg1@aleeas.com>"]
keywords = ["transfersh", "transfer", "terminal", "upload", "cloud"]
description = "Store your transfer.sh links, so you can remember them later and know when they will expire."
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/OLoKo64/transfer-sh-helper-rusted"
license = "MIT"

[profile.release]
lto = true
strip = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
owo-colors = "4.0.0"
tokio = { version = "1.35.1", features = ["macros", "rt"] }
reqwest = { version = "0.11.23", features = ["stream"] }
tokio-util = "0.7.10"
async-stream = "0.3.5"
tokio-stream = "0.1.14"
once_cell = "1.19.0"
comprexor = "0.1.520"
rusqlite = "0.30.0"
comfy-table = "7.1.0"
sha2 = "0.10.8"
